--- a/shell/.tmux.conf
+++ b/shell/.tmux.conf
@@ -12,13 +12,14 @@ bind C-a send-prefix
 set -g default-terminal "screen-256color"
 set -ga terminal-overrides ",xterm-256color*:Tc"
 set -g set-titles on
-set -g set-titles-string "#{pane_current_path} (tmux)"
+set -g set-titles-string "#{pane_current_path} - TMUX"
 
 # Setup vi-style copy/paste
 setw -g mode-keys vi 
 bind -T copy-mode-vi v send-keys -X begin-selection 
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
+#bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
+
 bind p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
 bind h select-pane -L
 bind j select-pane -D
