--- a/macShell/.tmux.conf
+++ b/macShell/.tmux.conf
@@ -1,7 +1,6 @@
 set -g history-limit 50000
 set -sg repeat-time 600
 set -sg escape-time 1
-set -g status off
 set -g mouse on
 
 setw -gq utf8 on
@@ -9,16 +8,14 @@ set -g prefix C-a
 unbind-key C-b
 bind C-a send-prefix
 
+set -g status-style bg=default
 set -g default-terminal "screen-256color"
-set -ga terminal-overrides ",xterm-256color*:Tc"
-set -g set-titles on
-set -g set-titles-string "#{pane_current_path} - TMUX"
 
 # Setup vi-style copy/paste
 setw -g mode-keys vi 
 bind -T copy-mode-vi v send-keys -X begin-selection 
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
-#bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
 
 bind p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
 bind h select-pane -L
