--- a/archShell/.config/i3status/config
+++ b/archShell/.config/i3status/config
@@ -1,37 +1,80 @@
 general {
         output_format = "i3bar"
-        colors = false
-        markup = pango
+        colors = true
         interval = 5
-        color_good = '#2f343f'
-		color_degraded = '#ebcb8b'
-		color_bad = '#ba5e57'
 }
 
 order += "disk /"
-order += "wireless wlp2s0"
-order += "battery 0"
+order += "ethernet enp58s0"
+order += "memory"
+order += "load"
 order += "tztime local"
+order += "tztime berlin"
 
-wireless wlp2s0 {
-        format_up = "<span>  %essid </span>"
-        format_down = "<span>  Disconnected </span>"
+wireless wlan0 {
+        format_up = "W: (%quality at %essid, %bitrate) %ip"
+        format_down = "W: down"
+}
+
+ethernet enp58s0 {
+        format_up = "E: %ip (%speed)"
+        format_down = "E: down"
 }
 
 battery 0 {
-	last_full_capacity = true
-        format = "<span>  %status %percentage </span>"
-        format_down = "No Battery"
-        status_chr = "Charging"
-        status_bat = "Battery"
-        status_unk = "Unknown"
-        status_full = "Charged"
+        format = "%status %percentage %remaining %emptytime"
+        format_down = "No battery"
+        status_chr = "⚡ CHR"
+        status_bat = "🔋 BAT"
+        status_unk = "? UNK"
+        status_full = "☻ FULL"
         path = "/sys/class/power_supply/BAT%d/uevent"
         low_threshold = 10
 }
 
-tztime local {
-		format = "<span> %time </span>"
-		format_time = " %a %-d %b %H:%M "
+run_watch DHCP {
+        pidfile = "/var/run/dhclient*.pid"
 }
 
+run_watch VPNC {
+        # file containing the PID of a vpnc process
+        pidfile = "/var/run/vpnc/pid"
+}
+
+path_exists VPN {
+        # path exists when a VPN tunnel launched by nmcli/nm-applet is active
+        path = "/proc/sys/net/ipv4/conf/tun0"
+}
+
+tztime local {
+        format = "%Y-%m-%d %H:%M:%S"
+        hide_if_equals_localtime = true
+}
+
+tztime berlin {
+        format = "%Y-%m-%d %H:%M:%S %Z"
+        timezone = "Europe/Berlin"
+}
+
+load {
+        format = "%5min"
+}
+
+cpu_temperature 0 {
+        format = "T: %degrees °C"
+        path = "/sys/devices/platform/coretemp.0/temp1_input"
+}
+
+memory {
+        format = "%used"
+        threshold_degraded = "10%"
+        format_degraded = "MEMORY: %free"
+}
+
+disk "/" {
+        format = "%free"
+}
+
+read_file uptime {
+        path = "/proc/uptime"
+}
