--- a/archShell/.tmux.conf
+++ b/archShell/.tmux.conf
@@ -18,7 +18,7 @@ set -g set-titles-string "#{pane_current_path} - TMUX"
 setw -g mode-keys vi 
 bind -T copy-mode-vi v send-keys -X begin-selection 
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
-#bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
 
 bind p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
 bind h select-pane -L
