--- a/macShell/.tmux.conf
+++ b/macShell/.tmux.conf
@@ -6,8 +6,8 @@ set -sg repeat-time 600
 set -sg escape-time 1
 set -g mouse on
 
-set -g set-titles on
-set -g set-titles-string "#{pane_current_path}"
+# set -g set-titles on
+# set -g set-titles-string "#{pane_current_path}"
 setw -gq utf8 on
 set -g prefix C-a
 unbind-key C-b
