--- a/macShell/.tmux.conf
+++ b/macShell/.tmux.conf
@@ -1,7 +1,6 @@
 set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
 
-set -g history-limit 50000
 set -sg repeat-time 600
 set -sg escape-time 1
 set -g mouse on
@@ -10,11 +9,12 @@ set -g mouse on
 # set -g set-titles-string "#{pane_current_path}"
 setw -gq utf8 on
 set -g prefix C-a
+
 unbind-key C-b
 bind C-a send-prefix
 
 set -g status-style bg=default
-
+set -g status-position top 
 # Setup vi-style copy/paste
 setw -g mode-keys vi 
 bind -T copy-mode-vi v send-keys -X begin-selection 
