--- a/macShell/.tmux.conf
+++ b/macShell/.tmux.conf
@@ -1,34 +1,28 @@
-set -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",xterm-256color:RGB"
-
+set -g default-terminal "tmux-256color"
+set -g status-position top 
+set -g status-style bg=default
+set -g status-right "#{pane_title}"
 set -sg repeat-time 600
 set -sg escape-time 1
 set -g mouse on
 
-# set -g set-titles on
-# set -g set-titles-string "#{pane_current_path}"
 setw -gq utf8 on
-set -g prefix C-a
+setw -g mode-keys vi 
 
+set -g prefix C-a
 unbind-key C-b
 bind C-a send-prefix
 
-set -g status-style bg=default
-set -g status-position top 
-# Setup vi-style copy/paste
-setw -g mode-keys vi 
 bind -T copy-mode-vi v send-keys -X begin-selection 
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
-
 bind p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
+
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
-bind -r C-h select-window -t+:-
-bind -r C-l select-window -t+:+
-
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
