--- a/shell/.config/alacritty/alacritty.yml
+++ b/shell/.config/alacritty/alacritty.yml
@@ -133,10 +133,10 @@ font:
     #   - (macOS) Menlo
     #   - (Linux/BSD) monospace
     #   - (Windows) Consolas
-    family: monospace
+      family: FiraCode Nerd Font
 
     # The `style` can be specified to pick a specific face.
-    style: Regular
+    #style: Regular
 
   # Bold font face
   #bold:
@@ -453,7 +453,7 @@ selection:
 #   - (Linux/BSD/macOS) `$SHELL` or the user's login shell, if `$SHELL` is unset
 #   - (Windows) powershell
 shell:
-  program: fish
+  program: /bin/zsh
   args:
     - -l
     - -c
