--- a/shell/.config/i3/config
+++ b/shell/.config/i3/config
@@ -17,7 +17,7 @@ set $mod Mod4
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 
-font pango:FiraCode Nerd Font
+font pango:FiraCode Nerd Font 11
 default_border none
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
