--- a/i3/i3/config
+++ b/i3/i3/config
@@ -9,10 +9,6 @@
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
-exec --no-startup-id autorandr home
-exec --no-startup-id picom -i 1
-focus_follows_mouse no
-
 set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
@@ -20,6 +16,7 @@ set $mod Mod4
 
 font pango:FiraCode Nerd Font 11
 default_border none
+focus_follows_mouse no
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -128,6 +125,11 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
+assign [class="Spotify"] 3 
+assign [class="Telegram"] 3
+assign [class="FileZilla"] 4 
+assign [class="Thunar"] 4 
+
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
@@ -158,6 +160,10 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
+# screenshoot area and send to xclip
+bindsym $mod+Print exec --no-startup-id maim -s | xclip -selection clipboard -t image/png
+
+bindsym $mod+Tab workspace back_and_forth
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -178,7 +184,7 @@ bindsym $mod+r mode "resize"
 # finds out, if available)
 bar {
     position top
+    tray_output none
     status_command i3status
 }
-
 
