--- a/i3/i3/config
+++ b/i3/i3/config
@@ -11,16 +11,14 @@
 
 set $mod Mod4
 
+exec --no-startup-id picom &
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 
 font pango:FiraCode Nerd Font 11
 default_border none
 focus_follows_mouse no
-
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
 
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
@@ -125,10 +123,9 @@ set $ws8 "8"
 set $ws9 "9"
 set $ws10 "10"
 
-assign [class="Spotify"] 3 
+assign [class="Spotify"] 3
 assign [class="Telegram"] 3
-assign [class="FileZilla"] 4 
-assign [class="Thunar"] 4 
+assign [class="thunderbird"] 3
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
