--- a/alacritty/alacritty/alacritty.yml
+++ b/alacritty/alacritty/alacritty.yml
@@ -452,12 +452,12 @@ selection:
 # Default:
 #   - (Linux/BSD/macOS) `$SHELL` or the user's login shell, if `$SHELL` is unset
 #   - (Windows) powershell
-shell:
-  program: /bin/zsh
-  args:
-    - -l
-    - -c
-    - "tmux attach || tmux"
+# shell:
+#   program: /bin/zsh
+#   args:
+#     - -l
+#     - -c
+#     - "tmux attach || tmux"
 #shell:
 #  program: /bin/bash
 #  args:
