ive finally remapped the eject key to something useful

--- a/i3/i3/config
+++ b/i3/i3/config
@@ -45,8 +45,8 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10%
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle
-# hhkb eject key code: 190, but not working!!!
-bindcode 190 exec --no-startup-id playerctl next
+# hhkb "eject" key  (fn+f) code: Event code 198
+bindcode --release 198 exec  --no-startup-id playerctl next
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
