--- a/i3/i3/config
+++ b/i3/i3/config
@@ -15,9 +15,17 @@ set $mod Mod4
 # is used in the bar {} block below.
 
 font pango:FiraCode Nerd Font 11
+# class                 border  backgr. text    indic.   child_border
+client.focused          #c6c8d1 #c6c8d1 #161821 #84a0c6
+client.focused_inactive #161821 #161821 #ffffff #454948
+client.unfocused        #161821 #161821 #ffffff #454948
+client.urgent           #b4be82 #b4be82 #161821 #268BD2
+client.placeholder      #000000 #0c0c0c #ffffff #000000
+client.background       #161821
+
 default_border none
 focus_follows_mouse no
-#gaps inner 10px
+
 #exec --no-startup-id feh --bg-scale /home/m/Pictures/bg.jpg
 
 # Start XDG autostart .desktop files using dex. See also
@@ -187,5 +195,16 @@ for_window [class="Thunar"] floating enable, border normal
 bar {
     position top
     status_command i3status
+    
+    colors {
+	    background #161821
+	    statusline #c6c8d1
+	    separator  #c6c8d1
+
+	    focused_workspace   #161821 #c6c8d1 #161821
+	    active_workspace    #d2d4de #d2d4de #161821
+	    inactive_workspace  #161821 #161821 #d2d4de
+	    urgent_workspace    #b4be82 #b4be82 #161821
+    }
 }
 
