--- a/alacritty/alacritty/alacritty.yml
+++ b/alacritty/alacritty/alacritty.yml
@@ -198,6 +198,35 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: false
 
+# Colors (Iceberg)
+colors:
+  # Default colors
+  primary:
+    background: '0x161821'
+    foreground: '0xc6c8d1'
+
+  # Normal colors
+  normal:
+    black:   '#1e2132'
+    red:     '#e27878'
+    green:   '#b4be82'
+    yellow:  '#e2a478'
+    blue:    '#84a0c6'
+    magenta: '#a093c7'
+    cyan:    '#89b8c2'
+    white:   '#c6c8d1'
+
+  # Bright colors
+  bright:
+    black:   '#6b7089'
+    red:     '#e98989'
+    green:   '#c0ca8e'
+    yellow:  '#e9b189'
+    blue:    '#91acd1'
+    magenta: '#ada0d3'
+    cyan:    '#95c4ce'
+    white:   '#d2d4de'
+
 # Colors (Tomorrow Night)
 #colors:
   # Default colors
