fix copy/paste tmux on ssh

--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -22,3 +22,5 @@ bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
 
+bind C-c run "tmux save-buffer - | xclip -i -sel clipboard"
+bind C-v run "tmux set-buffer "$(xclip -o -sel clipboard)"; tmux paste-buffer"
