--- a/server/.tmux.conf
+++ b/server/.tmux.conf
@@ -10,10 +10,10 @@ bind -T copy-mode-vi v send-keys -X begin-selection
 bind -T copy-mode-vi r send-keys -X rectangle-toggle
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "xsel -i -p && xsel -o -p | xsel -i -b"
 bind p run "xsel -o | tmux load-buffer - ; tmux paste-buffer"
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind j select-pane -L
+bind k select-pane -D
+bind l select-pane -U
+bind ; select-pane -R
 bind -r C-h select-window -t+:-
 bind -r C-l select-window -t+:+
 
