--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -14,10 +14,10 @@ set -g prefix C-a
 unbind-key C-b
 bind C-a send-prefix
 
-bind h select-pane -L
-bind j select-pane -D
-bind k select-pane -U
-bind l select-pane -R
+bind j select-pane -L
+bind k select-pane -D
+bind l select-pane -U
+bind ; select-pane -R
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
