fix vim navigation

--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -17,7 +17,7 @@ bind C-a send-prefix
 bind j select-pane -L
 bind k select-pane -D
 bind l select-pane -U
-bind ; select-pane -R
+bind ';' select-pane -R
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
