--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -9,6 +9,10 @@ set -g mouse on
 
 setw -gq utf8 on
 
+set -g prefix C-a
+unbind-key C-b
+bind C-a send-prefix
+
 bind j select-pane -L
 bind k select-pane -D
 bind l select-pane -U
