tmux esc timeout

--- a/tmux/tmux/tmux.conf
+++ b/tmux/tmux/tmux.conf
@@ -4,7 +4,6 @@ set -g status-style bg=default
 set -g status-position top 
 set -g mouse on
 setw -gq utf8 on
-
 set -g prefix C-a
 unbind-key C-b
 bind C-a send-prefix
@@ -17,3 +16,5 @@ bind ';' select-pane -R
 bind c new-window -c "#{pane_current_path}"
 bind '"' split-window -c "#{pane_current_path}"
 bind % split-window -h -c "#{pane_current_path}"
+
+set -s escape-time 0
