add alacritty tabs navigation

--- a/alacritty/alacritty/alacritty.toml
+++ b/alacritty/alacritty/alacritty.toml
@@ -45,3 +45,10 @@ save_to_clipboard = true
 [window.padding]
 x = 0
 y = 0
+
+
+[keyboard] 
+bindings = [
+{ key = "Tab", mods = "Control", action = "SelectNextTab" },
+{ key = "Tab", mods = "Control|Shift", action = "SelectPreviousTab" },
+]
