--- a/i3/i3/config
+++ b/i3/i3/config
@@ -71,6 +71,11 @@ bindsym $mod+Shift+k move down
 bindsym $mod+Shift+l move up
 bindsym $mod+Shift+semicolon move right
 
+# Focus parent and move right
+bindsym $mod+u exec "i3-msg focus parent; i3-msg focus right"
+# Focus parent and move left
+bindsym $mod+p exec "i3-msg focus parent; i3-msg focus left"
+
 # split in horizontal orientation
 bindsym $mod+h split h
 
