--- a/i3/i3/config
+++ b/i3/i3/config
@@ -94,54 +94,49 @@ bindsym $mod+a focus parent
 # focus the child container
 bindsym $mod+c focus child
 
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-
 # switch to workspace
-bindsym $mod+1 workspace number $ws1
-bindsym $mod+2 workspace number $ws2
-bindsym $mod+3 workspace number $ws3
+bindsym $mod+1 workspace number 1
+bindsym $mod+2 workspace number 2
+bindsym $mod+3 workspace number 3
+bindsym $mod+4 workspace number 4
+bindsym $mod+5 workspace number 5
+bindsym $mod+6 workspace number 6
+bindsym $mod+7 workspace number 7
+bindsym $mod+8 workspace number 8
+bindsym $mod+9 workspace number 9
+# move focused container to workspace
+bindsym $mod+Control+1 move container to workspace number 1
+bindsym $mod+Control+2 move container to workspace number 2
+bindsym $mod+Control+3 move container to workspace number 3
+bindsym $mod+Control+4 move container to workspace number 4
+bindsym $mod+Control+5 move container to workspace number 5
+bindsym $mod+Control+6 move container to workspace number 6
+bindsym $mod+Control+7 move container to workspace number 7
+bindsym $mod+Control+8 move container to workspace number 8
+bindsym $mod+Control+9 move container to workspace number 9
 
-bindsym $mod+4 workspace number $ws4
-bindsym $mod+5 workspace number $ws5
-bindsym $mod+6 workspace number $ws6
+set $wsSocial 4
+set $wsMusic 5
+set $wsMail 6
 
-bindsym $mod+7 workspace number $ws7
-bindsym $mod+8 workspace number $ws8
-bindsym $mod+9 workspace number $ws9
+set $wsOffice 7
+set $wsStuff 8
+set $wsDB 9
 
 # use xprop to find the WM_CLASS
-assign [class="Telegram"] "4"
-assign [class="Spotify"] "5"
-assign [class="thunderbird"] "6"
+assign [class="Telegram"] $wsSocial
 
-assign [class="libreoffice"] "7"
-assign [class="Brave-browser"] "8"
-assign [class="Chromium"] "8"
-assign [class="beekeeper-studio"] "9"
+assign [class="Spotify"] $wsMusic
+assign [class="thunderbird"] $wsMail
+
+assign [class="libreoffice"] $wsOffice
+assign [class="Brave-browser"] $wsStuff
+assign [class="Chromium"] $wsStuff
+assign [class="beekeeper-studio"] $wsDB
 
 for_window [class="Pavucontrol"] floating enable, border pixel 12
 for_window [class="Thunar"] floating enable, border pixel 12
 
-# move focused container to workspace
-bindsym $mod+Control+1 move container to workspace number $ws1
-bindsym $mod+Control+2 move container to workspace number $ws2
-bindsym $mod+Control+3 move container to workspace number $ws3
-bindsym $mod+Control+4 move container to workspace number $ws4
-bindsym $mod+Control+5 move container to workspace number $ws5
-bindsym $mod+Control+6 move container to workspace number $ws6
-bindsym $mod+Control+7 move container to workspace number $ws7
-bindsym $mod+Control+8 move container to workspace number $ws8
-bindsym $mod+Control+9 move container to workspace number $ws9
 # screenshoot area and send to xclip
 bindsym $mod+Control+s exec maim -su ~/Pictures/screenshot-$(date +\%y\%m\%d-\%h\%m\%s).png
 
