--- a/i3/i3/config
+++ b/i3/i3/config
@@ -1,9 +1,5 @@
 set $mod Mod4
 
-# Font for window titles. Will also be used by the bar unless a different font
-# is used in the bar {} block below.
-
-font pango:FiraCode Nerd Font 11
 # class                 border  backgr. text    indic.   child_border
 client.focused          #c6c8d1 #c6c8d1 #161821 #84a0c6
 client.focused_inactive #161821 #161821 #ffffff #454948
@@ -115,23 +111,21 @@ bindsym $mod+Control+7 move container to workspace number 7
 bindsym $mod+Control+8 move container to workspace number 8
 bindsym $mod+Control+9 move container to workspace number 9
 
+# use xprop to find the WM_CLASS
+
 set $wsSocial 4
 set $wsMusic 5
 set $wsMail 6
+assign [class="Telegram"] $wsSocial
+assign [class="Spotify"] $wsMusic
+assign [class="thunderbird"] $wsMail
 
 set $wsOffice 7
 set $wsStuff 8
 set $wsDB 9
-
-# use xprop to find the WM_CLASS
-assign [class="Telegram"] $wsSocial
-
-assign [class="Spotify"] $wsMusic
-assign [class="thunderbird"] $wsMail
-
 assign [class="libreoffice"] $wsOffice
 assign [class="Brave-browser"] $wsStuff
-assign [class="Chromium"] $wsStuff
+#assign [class="Chromium"] $wsStuff
 assign [class="beekeeper-studio"] $wsDB
 
 for_window [class="Pavucontrol"] floating enable, border pixel 12
