--- a/i3/i3/config
+++ b/i3/i3/config
@@ -54,7 +54,7 @@ bindsym $mod+Return exec alacritty
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym $mod+d exec --no-startup-id "rofi -combi-modi window,drun,ssh -theme Arc-Dark -font 'FiraCode Nerd Font 14' -show combi"
+bindsym $mod+d exec --no-startup-id "rofi -combi-modi drun -theme Arc-Dark -font 'FiraCode Nerd Font 14' -sorting-method fzf -sort -matching fuzzy -show combi"
 
 # change focus
 bindsym $mod+j focus left
@@ -112,18 +112,18 @@ bindsym $mod+Control+7 move container to workspace number 7
 bindsym $mod+Control+8 move container to workspace number 8
 bindsym $mod+Control+9 move container to workspace number 9
 
-# use xprop to find the WM_CLASS
+set $wsMusic 3
+set $wsStuff 4
+set $wsSocial 5
 
-set $wsSocial 4
-set $wsMusic 5
 set $wsMail 6
+set $wsOffice 7
+set $wsDB 8
+
+# use xprop to find WM_CLASS
 assign [class="Telegram"] $wsSocial
 assign [class="Spotify"] $wsMusic
 assign [class="thunderbird"] $wsMail
-
-set $wsOffice 7
-set $wsStuff 8
-set $wsDB 9
 assign [class="libreoffice"] $wsOffice
 assign [class="Brave-browser"] $wsStuff
 #assign [class="Chromium"] $wsStuff
