--- a/alacritty/alacritty/alacritty.toml
+++ b/alacritty/alacritty/alacritty.toml
@@ -50,10 +50,10 @@ y = 2
 bindings = [
 { key = "Tab", mods = "Control", action = "SelectNextTab" },
 { key = "Tab", mods = "Control|Shift", action = "SelectPreviousTab" },
-{ key = "j", action = "Left", mode ="Vi|~Search" },
-{ key = "k", action = "Down", mode = "Vi|~Search"},
-{ key = "l", action = "Up", mode = "Vi|~Search"},
-{ key = ";", action = "Right", mode = "Vi|~Search"},
+# { key = "j", action = "Left", mode ="Vi|~Search" },
+# { key = "k", action = "Down", mode = "Vi|~Search"},
+# { key = "l", action = "Up", mode = "Vi|~Search"},
+# { key = ";", action = "Right", mode = "Vi|~Search"},
 #disable macos shit
 { key = "w", mods= "Command", action = "None"},
 ]
