--- a/i3/i3/config
+++ b/i3/i3/config
@@ -18,7 +18,7 @@ exec --no-startup-id feh --bg-scale /home/m/Documents/stuff/Nighthawks_by_Edward
 exec --no-startup-id dex --autostart --environment i3
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id picom &
-# exec --no-startup-id /usr/lib/gsd-xsettings
+exec --no-startup-id /usr/lib/gsd-xsettings
 
 # # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
@@ -41,7 +41,7 @@ bindcode --release 198 exec --no-startup-id playerctl next
 bindcode --release 127 exec --no-startup-id playerctl play-pause
 
 # Use Mouse+$mod to drag floating windows to their wanted position
-floating_modifier $mod
+#floating_modifier $mod
 
 # move tiling windows via drag & drop by left-clicking into the title bar,
 # or left-clicking anywhere into the window while holding the floating modifier.
@@ -112,25 +112,23 @@ bindsym $mod+Control+7 move container to workspace number 7
 bindsym $mod+Control+8 move container to workspace number 8
 bindsym $mod+Control+9 move container to workspace number 9
 
+set $wsDB 9
+set $wsMail 8
 set $wsMusic 3
-set $wsStuff 4
-set $wsSocial 5
-
-set $wsMail 6
 set $wsOffice 7
-set $wsDB 8
+set $wsSocial 4
 
 # use xprop to find WM_CLASS
 assign [class="Telegram"] $wsSocial
 assign [class="Spotify"] $wsMusic
 assign [class="thunderbird"] $wsMail
 assign [class="libreoffice"] $wsOffice
-assign [class="Brave-browser"] $wsStuff
-#assign [class="Chromium"] $wsStuff
 assign [class="beekeeper-studio"] $wsDB
 
 for_window [class="Pavucontrol"] floating enable, border pixel 12
 for_window [class="Thunar"] floating enable, border pixel 12
+
+bindsym $mod+Tab workspace back_and_forth
 
 # screenshoot area and send to xclip
 bindsym $mod+Control+s exec maim -su ~/Pictures/screenshot-$(date +\%y\%m\%d-\%h\%m\%s).png
@@ -142,27 +140,24 @@ bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
 
-bindsym $mod+Tab workspace back_and_forth
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semi-colon resize grow width 10 px or 10 ppt
+        bindsym a resize shrink width 10 px or 10 ppt
+        bindsym d resize grow height 10 px or 10 ppt
+        bindsym s resize shrink height 10 px or 10 ppt
+        bindsym f resize grow width 10 px or 10 ppt
 
         # back to normal: Enter or Escape or $mod+r
         bindsym Return mode "default"
         bindsym Escape mode "default"
         bindsym $mod+r mode "default"
 }
-
 bindsym $mod+r mode "resize"
 
 bar {
     position top
     status_command i3status
-    
     colors {
 	    background #161821
 	    statusline #c6c8d1
